--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,5 +26,5 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: cd frontend && npm ci
-    - run: cd frontend && npm run build --if-present
+    - run: cd ./frontend && npm ci
+    - run: cd ./frontend && npm run build --if-present
