--- a/.github/workflows/node-build-and-deploy.js.yml
+++ b/.github/workflows/node-build-and-deploy.js.yml
@@ -29,4 +29,4 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@v4
       with:
         branch: page
-        folder: dist
+        folder: ./frontend/dist
