--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
+APP_ENV=docker
 DOCKER_DB_CONNSTRING=mongodb://tastebuddy:tastebuddy@localhost:27017
 DB_CONNSTRING=mongodb+srv://tastebuddyprod.xsyiamo.mongodb.net/?authSource=%24external&authMechanism=MONGODB-X509&retryWrites=true&w=majority&tlsCertificateKeyFile=mongo-cert.pem
