--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
 
+  # Try to build the project
   build:
     runs-on: ubuntu-latest
     steps:
@@ -21,3 +22,19 @@ jobs:
 
     - name: Build
       run: cd ./backend && go build -v .
+      
+  # coverage with DeepSource
+  coverage:
+    steps:
+      - name: Report results to DeepSource
+        run:
+          # Generate coverage report
+          - go test -coverprofile=cover.out
+          # Install deepsource CLI
+          - curl https://deepsource.io/cli | sh
+
+          # From the root directory, run the report coverage command
+          - ./bin/deepsource report --analyzer test-coverage --key go --value-file ./cover.out
+
+    env:
+      DEEPSOURCE_DSN: ${{ secrets.DEEPSOURCE_DSN }}
