--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,7 +1,7 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: Go
+name: Test Go Build
 
 on:
   push:
@@ -22,19 +22,3 @@ jobs:
 
     - name: Build
       run: cd ./backend && go build -v .
-      
-  # coverage with DeepSource
-  coverage:
-    steps:
-      - name: Report results to DeepSource
-        run:
-          # Generate coverage report
-          - go test -coverprofile=cover.out
-          # Install deepsource CLI
-          - curl https://deepsource.io/cli | sh
-
-          # From the root directory, run the report coverage command
-          - ./bin/deepsource report --analyzer test-coverage --key go --value-file ./cover.out
-
-    env:
-      DEEPSOURCE_DSN: ${{ secrets.DEEPSOURCE_DSN }}
