[.github] Change context of docker ci action

--- a/.github/workflows/go-docker-image.yml
+++ b/.github/workflows/go-docker-image.yml
@@ -28,7 +28,7 @@ jobs:
         name: Build and push Taste Buddy App
         uses: docker/build-push-action@v4
         with:
-          context: .
+          context: ./backend
           platforms: linux/amd64,linux/arm64
           push: true
           tags: jpkmiller/taste-buddy-app:latest
