--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-DB_CONNSTRING=mongodb://tastebuddy:tastebuddy@localhost:27017
+DB_CONNSTRING=mongodb+srv://tastebuddyprod.xsyiamo.mongodb.net/?authSource=%24external&authMechanism=MONGODB-X509&retryWrites=true&w=majority&tlsCertificateKeyFile=mongo-cert.pem
