--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,8 +7,17 @@ updates:
     directory: "/backend"
     schedule:
       interval: "weekly"
+    assignees:
+      - "am9zZWY"
 
   - package-ecosystem: "npm"
     directory: "/frontend"
     schedule:
       interval: "weekly""
+
+  - package-ecosystem: "github-actions"
+    # Workflow files stored in the
+    # default location of `.github/workflows`
+    directory: "/"
+    schedule:
+      interval: "weekly"
