--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,7 +13,7 @@ updates:
   - package-ecosystem: "npm"
     directory: "/frontend"
     schedule:
-      interval: "weekly""
+      interval: "weekly"
 
   - package-ecosystem: "github-actions"
     # Workflow files stored in the
