[.github] Analyse only when backend is changed

--- a/.github/workflows/go-static-analysis.yml
+++ b/.github/workflows/go-static-analysis.yml
@@ -1,5 +1,11 @@
 name: "Go Static Analysis"
-on: ["push", "pull_request"]
+on:
+  push:
+    paths:
+      - backend/**
+  pull_request:
+    paths:
+      - backend/**
 
 jobs:
   ci:
