[.github] Deploy only when frontend is changed

--- a/.github/workflows/node-build-and-deploy.js.yml
+++ b/.github/workflows/node-build-and-deploy.js.yml
@@ -1,7 +1,11 @@
 name: Build and Deploy
 on:
   push:
+    paths:
+      - frontend/**
   pull_request:
+    paths:
+      - frontend/**
 
 jobs:
   build-and-deploy:
