--- a/.github/workflows/node-build.js.yml
+++ b/.github/workflows/node-build.js.yml
@@ -5,9 +5,11 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "master" ]
+    paths:
+      - frontend/**
   pull_request:
-    branches: [ "master" ]
+    paths:
+      - frontend/**
 
 jobs:
   build:
