--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-DB_CONNSTRING=mongodb+srv://tastebuddyprod.xsyiamo.mongodb.net/?authSource=%24external&authMechanism=MONGODB-X509&retryWrites=true&w=majority&tlsCertificateKeyFile=mongo-cert.pem
+DB_URI=mongodb+srv://tastebuddyprod.xsyiamo.mongodb.net/?authSource=%24external&authMechanism=MONGODB-X509&retryWrites=true&w=majority&tlsCertificateKeyFile=mongo-cert.pem
 JWT_RSA_KEY=./private.key
 JWT_RSA_PUB_KEY=./public.key
