[frontend] Fix app for iOS, update components and structure

--- a/frontend/capacitor.config.json
+++ b/frontend/capacitor.config.json
@@ -1,6 +1,10 @@
 {
-	"appId": "io.ionic.starter",
+	"appId": "com.am9zzwy.tastebuddy",
 	"appName": "Taste-Buddy",
 	"webDir": "dist",
-	"bundledWebRuntime": false
+	"plugins": {
+		"CapacitorHttp": {
+			"enabled": true
+		}
+	}
 }
