--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@capacitor/android": "5.0.3",
-    "@capacitor/app": "5.0.0",
+    "@capacitor/android": "5.0.4",
+    "@capacitor/app": "5.0.2",
     "@capacitor/core": "5.0.4",
-    "@capacitor/haptics": "5.0.1",
-    "@capacitor/ios": "5.0.0",
+    "@capacitor/haptics": "5.0.2",
+    "@capacitor/ios": "5.0.4",
     "@capacitor/keyboard": "5.0.2",
-    "@capacitor/status-bar": "5.0.0",
+    "@capacitor/status-bar": "5.0.2",
     "@ionic/storage": "^4.0.0",
     "@ionic/vue": "^7.0.6",
     "@ionic/vue-router": "^7.0.9",
@@ -23,13 +23,13 @@
     "ionicons": "^7.0.0",
     "register-service-worker": "^1.7.2",
     "vue": "^3.3.4",
-    "vue-router": "^4.1.6",
+    "vue-router": "4.2.2",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@capacitor/cli": "5.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.5",
-    "@typescript-eslint/parser": "^5.59.1",
+    "@capacitor/cli": "5.0.4",
+    "@typescript-eslint/eslint-plugin": "5.59.8",
+    "@typescript-eslint/parser": "5.59.8",
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-eslint": "~5.0.8",
     "@vue/cli-plugin-pwa": "~5.0.8",
@@ -39,7 +39,7 @@
     "@vue/eslint-config-typescript": "^11.0.3",
     "cypress": "^12.11.0",
     "eslint": "^8.40.0",
-    "eslint-plugin-vue": "^9.12.0",
+    "eslint-plugin-vue": "9.14.1",
     "typescript": "^5.0.4"
   }
 }
