--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,10 +22,10 @@
     "@ionic/vue-router": "^7.0.10",
     "core-js": "^3.31.0",
     "ionicons": "^7.1.2",
+    "pinia": "^2.1.4",
     "register-service-worker": "^1.7.2",
     "vue": "^3.3.4",
-    "vue-router": "4.2.2",
-    "vuex": "^4.1.0"
+    "vue-router": "4.2.2"
   },
   "devDependencies": {
     "@capacitor/cli": "5.0.4",
