--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "@vue/eslint-config-typescript": "^11.0.3",
     "cypress": "^12.16.0",
     "eslint": "^8.42.0",
+    "eslint-plugin-sonarjs": "^0.19.0",
     "eslint-plugin-vue": "9.14.1",
     "typescript": "^5.1.3"
   }
