--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@capacitor/android": "5.0.5",
     "@capacitor/app": "5.0.5",
     "@capacitor/core": "5.2.2",
+    "@capacitor/geolocation": "^5.0.6",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/ios": "5.0.5",
     "@capacitor/keyboard": "5.0.6",
