--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,10 @@
     "eslint": "^8.44.0",
     "eslint-plugin-sonarjs": "^0.19.0",
     "eslint-plugin-vue": "9.14.1",
+    "postcss-html": "^1.5.0",
+    "stylelint": "^15.10.2",
+    "stylelint-config-recommended-vue": "^1.5.0",
+    "stylelint-config-standard": "^34.0.0",
     "typescript": "^5.1.3"
   }
 }
