--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,12 @@
     "@capacitor/haptics": "5.0.6",
     "@capacitor/ios": "5.2.3",
     "@capacitor/keyboard": "5.0.6",
-    "@capacitor/push-notifications": "^5.0.6",
     "@capacitor/share": "^5.0.6",
     "@capacitor/status-bar": "5.0.4",
     "@ionic/storage": "^4.0.0",
     "@ionic/vue": "^7.3.0",
     "@ionic/vue-router": "^7.1.3",
+    "@unhead/vue": "^1.7.4",
     "core-js": "^3.31.1",
     "fastest-levenshtein": "^1.0.16",
     "ionicons": "^7.1.2",
