[frontend] Add translations, improve meta tags and UI

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -37,7 +37,8 @@
   "include": [
     "src/**/*.ts",
     "src/**/*.tsx",
-    "src/**/*.vue"
+    "src/**/*.vue",
+    "src/**/*.json"
   ],
   "exclude": [
     "node_modules"
