--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,6 @@
     "@capacitor/android": "5.2.3",
     "@capacitor/app": "5.0.5",
     "@capacitor/core": "5.3.0",
-    "@capacitor/geolocation": "^5.0.6",
-    "@capacitor/haptics": "5.0.6",
     "@capacitor/ios": "5.2.3",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/share": "^5.0.6",
@@ -22,6 +20,7 @@
     "@ionic/vue": "^7.3.0",
     "@ionic/vue-router": "^7.4.1",
     "@unhead/vue": "^1.7.4",
+    "compromise": "^14.10.0",
     "core-js": "^3.32.2",
     "fastest-levenshtein": "^1.0.16",
     "ionicons": "^7.1.2",
@@ -29,6 +28,7 @@
     "pinia": "^2.1.6",
     "register-service-worker": "^1.7.2",
     "vue": "^3.3.4",
+    "vue-i18n": "9",
     "vue-router": "4.2.4"
   },
   "devDependencies": {
