--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,6 @@
   "scripts": {
     "serve:app": "vue-cli-service serve src/app/main.ts",
     "serve:editor": "vue-cli-service serve src/editor/editor.ts",
-    "build:app": "vue-cli-service build src/app/main.ts",
-    "lint": "vue-cli-service lint src/app/main.ts",
     "publish": "sh ./scripts/publish-pwa.sh"
   },
   "dependencies": {
@@ -26,9 +24,9 @@
     "lz-string": "^1.5.0",
     "pinia": "^2.1.6",
     "register-service-worker": "^1.7.2",
-    "vue": "^3.3.4",
+    "vue": "latest",
     "vue-i18n": "^9.5.0",
-    "vue-router": "4.2.5"
+    "vue-router": "latest"
   },
   "devDependencies": {
     "@capacitor/cli": "5.3.0",
