[frontend] Add first implementation of ML Model to learn which recipes the user likes

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "@ionic/storage": "^4.0.0",
     "@ionic/vue": "^7.3.0",
     "@ionic/vue-router": "^7.5.0",
+    "brain.js": "^2.0.0-beta.23",
     "core-js": "^3.33.0",
     "fastest-levenshtein": "^1.0.16",
     "lz-string": "^1.5.0",
