--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "Taste Buddy",
   "description": "A simple app to help you find the best recipes for your ingredients.",
   "display": "standalone",
-  "theme_color": "#F28705",
+  "theme_color": "#ffffff",
   "background_color": "#ffffff",
   "start_url": ".",
   "scope": "/",
