--- a/client/package.json
+++ b/client/package.json
@@ -39,13 +39,13 @@
     "@capacitor/status-bar": "5.0.6",
     "@ionic/storage": "^4.0.0",
     "@ionic/vue": "^7.5.4",
-    "@ionic/vue-router": "^7.5.2",
+    "@ionic/vue-router": "^7.5.4",
     "core-js": "^3.33.2",
     "fastest-levenshtein": "^1.0.16",
     "lz-string": "^1.5.0",
     "pinia": "^2.1.7",
     "register-service-worker": "^1.7.2",
-    "vue": "latest",
+    "vue": "^3.3.8",
     "vue-i18n": "^9.6.5",
     "vue-router": "^4.2.5"
   },
@@ -61,7 +61,7 @@
     "@vue/cli-service": "~5.0.8",
     "@vue/eslint-config-typescript": "^12.0.0",
     "compromise": "^14.10.0",
-    "cypress": "^13.4.0",
+    "cypress": "^13.5.0",
     "eslint": "^8.53.0",
     "eslint-plugin-sonarjs": "^0.23.0",
     "eslint-plugin-vue": "9.18.1",
