--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,7 +4,7 @@
 version: 2
 updates:
   - package-ecosystem: "gomod"
-    directory: "/server"
+    directory: "/server-prod"
     schedule:
       interval: "weekly"
     assignees:
