--- a/.github/workflows/server-prod-build.yml
+++ b/.github/workflows/server-prod-build.yml
@@ -1,15 +1,15 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: Test Go Build
+name: Production Server Test Build
 
 on:
   push:
     paths:
-      - server/**
+      - server-prod/**
   pull_request:
     paths:
-      - server/**
+      - server-prod/**
 
 jobs:
 
@@ -24,5 +24,5 @@ jobs:
       with:
         go-version: 1.19
 
-    - name: Build
-      run: cd ./server && go build -v .
+    - name: Build Production Server
+      run: cd ./server-prod && go build -v .
