--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,6 +14,8 @@ updates:
     directory: "/client"
     schedule:
       interval: "weekly"
+    assignees:
+      - "am9zZWY"
 
   - package-ecosystem: "github-actions"
     # Workflow files stored in the
@@ -21,3 +23,5 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+    assignees:
+      - "am9zZWY"
