--- a/.github/workflows/client-build.yml
+++ b/.github/workflows/client-build.yml
@@ -16,18 +16,12 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [21.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
+    - uses: actions/checkout@v3
+    - uses: oven-sh/setup-bun@v1
+    - uses: oven-sh/setup-bun@v1
       with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-        cache-dependency-path: client/package-lock.json
-    - run: cd ./client && npm ci
-    - run: cd ./client && npm run build --if-present
+        bun-version: latest
+
+    - run: cd ./client && bun install
+    - run: cd ./client && bun run build
