--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,12 +1,15 @@
 # https://github.com/actions/labeler
 
 server:
-- server-prod/**
-- server-dev/**
+- all:
+  - 'server-prod/**/*'
+  - 'server-dev/**/*'
 
 client:
-- client/**/*
+- all:
+  - 'client/**/*'
 
 infrastructure:
-- .github/**/*
-- .vscode/**/*
+- all:
+  - '.github/**/*'
+  - '.vscode/**/*'
