--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,15 +1,15 @@
 # https://github.com/actions/labeler
 
-server:
+Server:
 - all:
   - 'server-prod/**/*'
   - 'server-dev/**/*'
 
-client:
+Client:
 - all:
   - 'client/**/*'
 
-infrastructure:
+Infra:
 - all:
   - '.github/**/*'
   - '.vscode/**/*'
