--- a/client/package.json
+++ b/client/package.json
@@ -37,10 +37,10 @@
     "@capacitor/keyboard": "5.0.9",
     "@capacitor/share": "^5.0.8",
     "@capacitor/status-bar": "5.0.7",
-    "@ionic/core": "8",
+    "@ionic/core": "^8.2.6",
     "@ionic/storage": "^4.0.0",
-    "@ionic/vue": "8",
-    "@ionic/vue-router": "8",
+    "@ionic/vue": "^8.2.6",
+    "@ionic/vue-router": "^8.2.6",
     "@vueuse/core": "^10.11.0",
     "core-js": "^3.37.1",
     "fastest-levenshtein": "^1.0.16",
