--- a/.github/workflows/client-build.yml
+++ b/.github/workflows/client-build.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Client Test Build
 
 on:
@@ -16,18 +13,8 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [21.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
     - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-        cache-dependency-path: client/package-lock.json
-    - run: cd ./client && npm ci
-    - run: cd ./client && npm run build:app --if-present
+    - uses: oven-sh/setup-bun@v2
+    - run: cd ./client && bun install
+    - run: cd ./client && bun run build:app --if-present
