--- a/client/package.json
+++ b/client/package.json
@@ -24,9 +24,9 @@
     "food"
   ],
   "scripts": {
-    "serve:app": "vue-cli-service serve src/app/main.ts",
-    "serve:editor": "vue-cli-service serve src/editor/editor.ts",
-    "build:app": "vue-cli-service build src/app/main.ts",
+    "dev": "vue-cli-service serve src/app/main.ts",
+    "edit": "vue-cli-service serve src/editor/editor.ts",
+    "build": "vue-cli-service build src/app/main.ts",
     "publish": "sh ./scripts/publish-pwa.sh"
   },
   "dependencies": {
@@ -42,14 +42,14 @@
     "@ionic/vue": "^8.2.6",
     "@ionic/vue-router": "^8.2.6",
     "@vueuse/core": "^10.11.0",
-    "core-js": "^3.37.1",
+    "core-js": "^3.38.0",
     "fastest-levenshtein": "^1.0.16",
     "lz-string": "^1.5.0",
-    "pinia": "^2.1.7",
+    "pinia": "^2.2.0",
     "register-service-worker": "^1.7.2",
-    "vue": "^3.4.34",
+    "vue": "^3.4.35",
     "vue-i18n": "^9.13.1",
-    "vue-router": "^4.4.0"
+    "vue-router": "^4.4.2"
   },
   "devDependencies": {
     "@capacitor/cli": "6.1.1",
@@ -62,13 +62,13 @@
     "@vue/cli-plugin-typescript": "~5.0.8",
     "@vue/cli-service": "~5.0.8",
     "@vue/eslint-config-typescript": "^13.0.0",
-    "compromise": "^14.13.0",
-    "cypress": "^13.13.1",
+    "compromise": "^14.14.0",
+    "cypress": "^13.13.2",
     "eslint": "^8.57.0",
     "eslint-plugin-sonarjs": "^1.0.4",
     "eslint-plugin-vue": "9.27.0",
     "postcss-html": "^1.7.0",
-    "stylelint": "^16.7.0",
+    "stylelint": "^16.8.1",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^36.0.1",
     "typescript": "^5.5.4"
