--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "@ionic/vue-router": "^8.2.6",
     "@vueuse/core": "^10.11.0",
     "core-js": "^3.38.0",
+    "eslint-config-prettier": "^9.1.0",
     "fastest-levenshtein": "^1.0.16",
     "lz-string": "^1.5.0",
     "pinia": "^2.2.0",
