--- a/client/package.json
+++ b/client/package.json
@@ -32,12 +32,14 @@
   "dependencies": {
     "@capacitor/android": "6.1.1",
     "@capacitor/app": "6.0.0",
+    "@capacitor/camera": "^6.0.1",
     "@capacitor/core": "6.1.1",
     "@capacitor/ios": "6.1.1",
     "@capacitor/keyboard": "6.0.1",
     "@capacitor/share": "^6.0.1",
     "@capacitor/status-bar": "6.0.0",
     "@ionic/core": "^8.2.6",
+    "@ionic/pwa-elements": "^3.3.0",
     "@ionic/storage": "^4.0.0",
     "@ionic/vue": "^8.2.6",
     "@ionic/vue-router": "^8.2.6",
