--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,12 +1,15 @@
 aiohttp==3.10.1
+black==24.8.0
 cachetools==5.4.0
 fastapi==0.111.1
 httptools==0.6.1
-ingredient_parser_nlp
+ingredient-parser-nlp
+openai==1.40.1
 pip-chill==1.0.3
 pydantic==2.8.2
 pymongo==4.8.0
 python-dotenv==1.0.1
+pyyaml==6.0.1
 recipe-scrapers==14.58.0
 starlette==0.37.2
 uvloop==0.19.0
