--- a/taste_buddy/pubspec.yaml
+++ b/taste_buddy/pubspec.yaml
@@ -2,12 +2,12 @@ name: taste_buddy
 description: "A new Flutter project."
 
 # Prevent accidental publishing to pub.dev.
-publish_to: 'none'
+publish_to: none
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.4.4 <4.0.0'
+  sdk: '^3.5.0'
 
 dependencies:
   flutter:
@@ -16,13 +16,10 @@ dependencies:
     sdk: flutter
   http: ^1.2.2
   provider: ^6.1.2
-  go_router: ^7.1.1
+  go_router: ^14.2.7
   collection: ^1.18.0
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-
   flutter_lints: ^4.0.0
 
 flutter:
