--- a/taste_buddy/pubspec.yaml
+++ b/taste_buddy/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   provider: ^6.1.2
   go_router: ^14.2.7
   collection: ^1.18.0
+  fuzzywuzzy: ^1.2.0
 
 dev_dependencies:
   flutter_lints: ^4.0.0
