--- a/taste_buddy_server/.pre-commit-config.yaml
+++ b/taste_buddy_server/.pre-commit-config.yaml
@@ -12,3 +12,10 @@ repos:
     rev: 22.10.0
     hooks:
     -   id: black
+-   repo: https://github.com/python-poetry/poetry
+    rev: '1.8.3'
+    hooks:
+    -   id: poetry-check
+    -   id: poetry-lock
+    -   id: poetry-export
+    -   id: poetry-install
