--- a/taste_buddy_server/docker-compose.yml
+++ b/taste_buddy_server/docker-compose.yml
@@ -1,15 +1,11 @@
-services:
-  mongodb:
-    image: mongo:latest
-    container_name: mongodb
-    restart: always
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
-    ports:
-      - "27017:27017"
-    volumes:
-      - mongodb_data:/data/db
+version: '3.8'
 
-volumes:
-  mongodb_data:
+services:
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8000:8000"
+    env_file:
+      - .env
