--- a/taste_buddy/pubspec.yaml
+++ b/taste_buddy/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   go_router: ^14.2.7
   collection: ^1.18.0
   fuzzywuzzy: ^1.2.0
+  share_plus: ^10.0.2
+  flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
   flutter_lints: ^4.0.0
