Add health check and improve api requests

--- a/taste_buddy/pubspec.yaml
+++ b/taste_buddy/pubspec.yaml
@@ -1,5 +1,5 @@
 name: taste_buddy
-description: "A new Flutter project."
+description: "Your personal cooking companion."
 
 # Prevent accidental publishing to pub.dev.
 publish_to: none
