Update UI and start experimenting with recipe planner

--- a/taste_buddy/pubspec.yaml
+++ b/taste_buddy/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   share_plus: ^10.0.2
   flutter_secure_storage: ^9.2.2
   shared_preferences: ^2.3.2
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_lints: ^4.0.0
