--- a/taste_buddy_server/pyproject.toml
+++ b/taste_buddy_server/pyproject.toml
@@ -27,6 +27,8 @@ pint = "^0.24.3"
 python-multipart = "^0.0.9"
 argon2-cffi = "^23.1.0"
 pyjwt = "^2.9.0"
+rapidfuzz = "^3.9.7"
+pytest = "^8.3.3"
 
 [tool.poetry.group.dev.dependencies]
 fastapi = "^0.115.0"
