--- a/taste_buddy_server/requirements.txt
+++ b/taste_buddy_server/requirements.txt
@@ -2,7 +2,7 @@ aiohappyeyeballs==2.4.0 ; python_version >= "3.10" and python_version < "3.13"
 aiohttp==3.10.5 ; python_version >= "3.10" and python_version < "3.13"
 aiosignal==1.3.1 ; python_version >= "3.10" and python_version < "3.13"
 annotated-types==0.7.0 ; python_version >= "3.10" and python_version < "3.13"
-anyio==4.4.0 ; python_version >= "3.10" and python_version < "3.13"
+anyio==4.6.0 ; python_version >= "3.10" and python_version < "3.13"
 appdirs==1.4.4 ; python_version >= "3.10" and python_version < "3.13"
 argon2-cffi-bindings==21.2.0 ; python_version >= "3.10" and python_version < "3.13"
 argon2-cffi==23.1.0 ; python_version >= "3.10" and python_version < "3.13"
@@ -12,15 +12,15 @@ beautifulsoup4==4.12.3 ; python_version >= "3.10" and python_version < "3.13"
 black==24.8.0 ; python_version >= "3.10" and python_version < "3.13"
 cachetools==5.5.0 ; python_version >= "3.10" and python_version < "3.13"
 certifi==2024.8.30 ; python_version >= "3.10" and python_version < "3.13"
-cffi==1.17.0 ; python_version >= "3.10" and python_version < "3.13"
+cffi==1.17.1 ; python_version >= "3.10" and python_version < "3.13"
 charset-normalizer==3.3.2 ; python_version >= "3.10" and python_version < "3.13"
 click==8.1.7 ; python_version >= "3.10" and python_version < "3.13"
-colorama==0.4.6 ; python_version >= "3.10" and python_version < "3.13" and platform_system == "Windows"
+colorama==0.4.6 ; python_version >= "3.10" and python_version < "3.13" and (sys_platform == "win32" or platform_system == "Windows")
 distro==1.9.0 ; python_version >= "3.10" and python_version < "3.13"
 dnspython==2.6.1 ; python_version >= "3.10" and python_version < "3.13"
 exceptiongroup==1.2.2 ; python_version >= "3.10" and python_version < "3.11"
 extruct==0.17.0 ; python_version >= "3.10" and python_version < "3.13"
-fastapi==0.112.2 ; python_version >= "3.10" and python_version < "3.13"
+fastapi==0.115.0 ; python_version >= "3.10" and python_version < "3.13"
 flexcache==0.3 ; python_version >= "3.10" and python_version < "3.13"
 flexparser==0.3.1 ; python_version >= "3.10" and python_version < "3.13"
 frozenlist==1.4.1 ; python_version >= "3.10" and python_version < "3.13"
@@ -30,8 +30,9 @@ html5lib==1.1 ; python_version >= "3.10" and python_version < "3.13"
 httpcore==1.0.5 ; python_version >= "3.10" and python_version < "3.13"
 httptools==0.6.1 ; python_version >= "3.10" and python_version < "3.13"
 httpx==0.27.2 ; python_version >= "3.10" and python_version < "3.13"
-idna==3.8 ; python_version >= "3.10" and python_version < "3.13"
+idna==3.10 ; python_version >= "3.10" and python_version < "3.13"
 ingredient-parser-nlp==1.1.2 ; python_version >= "3.10" and python_version < "3.13"
+iniconfig==2.0.0 ; python_version >= "3.10" and python_version < "3.13"
 isodate==0.6.1 ; python_version >= "3.10" and python_version < "3.13"
 jiter==0.5.0 ; python_version >= "3.10" and python_version < "3.13"
 joblib==1.4.2 ; python_version >= "3.10" and python_version < "3.13"
@@ -39,40 +40,43 @@ jstyleson==0.0.2 ; python_version >= "3.10" and python_version < "3.13"
 lxml-html-clean==0.2.2 ; python_version >= "3.10" and python_version < "3.13"
 lxml==5.3.0 ; python_version >= "3.10" and python_version < "3.13"
 mf2py==2.0.1 ; python_version >= "3.10" and python_version < "3.13"
-multidict==6.0.5 ; python_version >= "3.10" and python_version < "3.13"
+multidict==6.1.0 ; python_version >= "3.10" and python_version < "3.13"
 mypy-extensions==1.0.0 ; python_version >= "3.10" and python_version < "3.13"
 nltk==3.9.1 ; python_version >= "3.10" and python_version < "3.13"
-openai==1.43.0 ; python_version >= "3.10" and python_version < "3.13"
+openai==1.47.0 ; python_version >= "3.10" and python_version < "3.13"
 packaging==24.1 ; python_version >= "3.10" and python_version < "3.13"
 pathspec==0.12.1 ; python_version >= "3.10" and python_version < "3.13"
 pint==0.24.3 ; python_version >= "3.10" and python_version < "3.13"
 pip-chill==1.0.3 ; python_version >= "3.10" and python_version < "3.13"
-platformdirs==4.2.2 ; python_version >= "3.10" and python_version < "3.13"
+platformdirs==4.3.6 ; python_version >= "3.10" and python_version < "3.13"
+pluggy==1.5.0 ; python_version >= "3.10" and python_version < "3.13"
 pycparser==2.22 ; python_version >= "3.10" and python_version < "3.13"
-pydantic-core==2.20.1 ; python_version >= "3.10" and python_version < "3.13"
-pydantic==2.8.2 ; python_version >= "3.10" and python_version < "3.13"
+pydantic-core==2.23.4 ; python_version >= "3.10" and python_version < "3.13"
+pydantic==2.9.2 ; python_version >= "3.10" and python_version < "3.13"
 pyjwt==2.9.0 ; python_version >= "3.10" and python_version < "3.13"
-pymongo==4.8.0 ; python_version >= "3.10" and python_version < "3.13"
+pymongo==4.9.1 ; python_version >= "3.10" and python_version < "3.13"
 pyparsing==3.1.4 ; python_version >= "3.10" and python_version < "3.13"
 pyrdfa3==3.6.4 ; python_version >= "3.10" and python_version < "3.13"
+pytest==8.3.3 ; python_version >= "3.10" and python_version < "3.13"
 python-crfsuite==0.9.10 ; python_version >= "3.10" and python_version < "3.13"
 python-dotenv==1.0.1 ; python_version >= "3.10" and python_version < "3.13"
 python-multipart==0.0.9 ; python_version >= "3.10" and python_version < "3.13"
 pyyaml==6.0.2 ; python_version >= "3.10" and python_version < "3.13"
+rapidfuzz==3.9.7 ; python_version >= "3.10" and python_version < "3.13"
 rdflib==7.0.0 ; python_version >= "3.10" and python_version < "3.13"
 recipe-scrapers==15.1.0 ; python_version >= "3.10" and python_version < "3.13"
-regex==2024.7.24 ; python_version >= "3.10" and python_version < "3.13"
+regex==2024.9.11 ; python_version >= "3.10" and python_version < "3.13"
 requests==2.32.3 ; python_version >= "3.10" and python_version < "3.13"
 six==1.16.0 ; python_version >= "3.10" and python_version < "3.13"
 sniffio==1.3.1 ; python_version >= "3.10" and python_version < "3.13"
 soupsieve==2.6 ; python_version >= "3.10" and python_version < "3.13"
-starlette==0.38.4 ; python_version >= "3.10" and python_version < "3.13"
+starlette==0.38.5 ; python_version >= "3.10" and python_version < "3.13"
 tomli==2.0.1 ; python_version >= "3.10" and python_version < "3.11"
 tqdm==4.66.5 ; python_version >= "3.10" and python_version < "3.13"
 typing-extensions==4.12.2 ; python_version >= "3.10" and python_version < "3.13"
-urllib3==2.2.2 ; python_version >= "3.10" and python_version < "3.13"
+urllib3==2.2.3 ; python_version >= "3.10" and python_version < "3.13"
 uvicorn==0.30.6 ; python_version >= "3.10" and python_version < "3.13"
 uvloop==0.20.0 ; python_version >= "3.10" and python_version < "3.13"
 w3lib==2.2.1 ; python_version >= "3.10" and python_version < "3.13"
 webencodings==0.5.1 ; python_version >= "3.10" and python_version < "3.13"
-yarl==1.9.7 ; python_version >= "3.10" and python_version < "3.13"
+yarl==1.11.1 ; python_version >= "3.10" and python_version < "3.13"
