--- a/taste_buddy_server/requirements.txt
+++ b/taste_buddy_server/requirements.txt
@@ -16,6 +16,7 @@ cffi==1.17.1 ; python_version >= "3.10" and python_version < "3.13"
 charset-normalizer==3.3.2 ; python_version >= "3.10" and python_version < "3.13"
 click==8.1.7 ; python_version >= "3.10" and python_version < "3.13"
 colorama==0.4.6 ; python_version >= "3.10" and python_version < "3.13" and (sys_platform == "win32" or platform_system == "Windows")
+deprecated==1.2.14 ; python_version >= "3.10" and python_version < "3.13"
 distro==1.9.0 ; python_version >= "3.10" and python_version < "3.13"
 dnspython==2.6.1 ; python_version >= "3.10" and python_version < "3.13"
 exceptiongroup==1.2.2 ; python_version >= "3.10" and python_version < "3.11"
@@ -31,12 +32,14 @@ httpcore==1.0.5 ; python_version >= "3.10" and python_version < "3.13"
 httptools==0.6.1 ; python_version >= "3.10" and python_version < "3.13"
 httpx==0.27.2 ; python_version >= "3.10" and python_version < "3.13"
 idna==3.10 ; python_version >= "3.10" and python_version < "3.13"
+importlib-resources==6.4.5 ; python_version >= "3.10" and python_version < "3.13"
 ingredient-parser-nlp==1.1.2 ; python_version >= "3.10" and python_version < "3.13"
 iniconfig==2.0.0 ; python_version >= "3.10" and python_version < "3.13"
 isodate==0.6.1 ; python_version >= "3.10" and python_version < "3.13"
 jiter==0.5.0 ; python_version >= "3.10" and python_version < "3.13"
 joblib==1.4.2 ; python_version >= "3.10" and python_version < "3.13"
 jstyleson==0.0.2 ; python_version >= "3.10" and python_version < "3.13"
+limits==3.13.0 ; python_version >= "3.10" and python_version < "3.13"
 lxml-html-clean==0.2.2 ; python_version >= "3.10" and python_version < "3.13"
 lxml==5.3.0 ; python_version >= "3.10" and python_version < "3.13"
 mf2py==2.0.1 ; python_version >= "3.10" and python_version < "3.13"
@@ -68,9 +71,10 @@ recipe-scrapers==15.1.0 ; python_version >= "3.10" and python_version < "3.13"
 regex==2024.9.11 ; python_version >= "3.10" and python_version < "3.13"
 requests==2.32.3 ; python_version >= "3.10" and python_version < "3.13"
 six==1.16.0 ; python_version >= "3.10" and python_version < "3.13"
+slowapi==0.1.9 ; python_version >= "3.10" and python_version < "3.13"
 sniffio==1.3.1 ; python_version >= "3.10" and python_version < "3.13"
 soupsieve==2.6 ; python_version >= "3.10" and python_version < "3.13"
-starlette==0.38.5 ; python_version >= "3.10" and python_version < "3.13"
+starlette==0.38.6 ; python_version >= "3.10" and python_version < "3.13"
 tomli==2.0.1 ; python_version >= "3.10" and python_version < "3.11"
 tqdm==4.66.5 ; python_version >= "3.10" and python_version < "3.13"
 typing-extensions==4.12.2 ; python_version >= "3.10" and python_version < "3.13"
@@ -79,4 +83,5 @@ uvicorn==0.30.6 ; python_version >= "3.10" and python_version < "3.13"
 uvloop==0.20.0 ; python_version >= "3.10" and python_version < "3.13"
 w3lib==2.2.1 ; python_version >= "3.10" and python_version < "3.13"
 webencodings==0.5.1 ; python_version >= "3.10" and python_version < "3.13"
+wrapt==1.16.0 ; python_version >= "3.10" and python_version < "3.13"
 yarl==1.11.1 ; python_version >= "3.10" and python_version < "3.13"
