--- a/project_kiwi/package.json
+++ b/project_kiwi/package.json
@@ -15,12 +15,13 @@
   "dependencies": {
     "@quasar/extras": "^1.16.12",
     "axios": "^1.7.7",
-    "bson": "^6.8.0",
+    "fuse.js": "^7.0.0",
     "pinia": "^2.2.2",
     "quasar": "^2.17.0",
     "register-service-worker": "^1.7.2",
-    "vue": "^3.5.8",
-    "vue-i18n": "^9.14.0",
+    "stemmer": "^2.0.1",
+    "vue": "^3.5.9",
+    "vue-i18n": "^9.14.1",
     "vue-router": "^4.4.5",
     "zod": "^3.23.8"
   },
@@ -38,13 +39,13 @@
     "typescript": "~5.5.4",
     "vite-plugin-checker": "^0.8.0",
     "vue-tsc": "^2.1.6",
-    "workbox-build": "^7.0.0",
-    "workbox-cacheable-response": "^7.0.0",
-    "workbox-core": "^7.0.0",
-    "workbox-expiration": "^7.0.0",
-    "workbox-precaching": "^7.0.0",
-    "workbox-routing": "^7.0.0",
-    "workbox-strategies": "^7.0.0"
+    "workbox-build": "^7.1.1",
+    "workbox-cacheable-response": "^7.1.0",
+    "workbox-core": "^7.1.0",
+    "workbox-expiration": "^7.1.0",
+    "workbox-precaching": "^7.1.0",
+    "workbox-routing": "^7.1.0",
+    "workbox-strategies": "^7.1.0"
   },
   "engines": {
     "node": "^24 || ^22 || ^20 || ^18",
