--- a/kiwi_cook_server/docker-compose.yml
+++ b/kiwi_cook_server/docker-compose.yml
@@ -1,10 +1,10 @@
 services:
-  taste-buddy:
+  kiwi-cook:
     build:
       context: .
       dockerfile: Dockerfile
-    image: taste-buddy:latest
-    container_name: taste-buddy
+    image: kiwi-cook:latest
+    container_name: kiwi-cook
     restart: unless-stopped
     env_file:
       - .env
@@ -19,8 +19,8 @@ services:
       retries: 3
       start_period: 40s
     networks:
-      - taste-buddy-network
+      - kiwi-cook-network
 
 networks:
-  taste-buddy-network:
+  kiwi-cook-network:
     driver: bridge
