--- a/kiwi_cook_server/pyproject.toml
+++ b/kiwi_cook_server/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "taste_buddy_server"
+name = "kiwi_cook_server"
 version = "0.1.0"
 description = ""
 authors = ["am9zZWY <46693545+am9zZWY@users.noreply.github.com>"]
