Update kiwi-cook server

--- a/kiwi_cook_server/Dockerfile
+++ b/kiwi_cook_server/Dockerfile
@@ -44,13 +44,15 @@ RUN apt-get update && \
 
 # Set Python unbuffered environment variable
 ENV PYTHONUNBUFFERED=1
+ENV ENV=production
 
 # Create a non-root user and switch to it
-RUN useradd -m myuser
-USER myuser
+RUN useradd -m kiwiuser
+USER kiwiuser
 
 # Expose port 8000
 EXPOSE 8000
 
 # Run the FastAPI app
-CMD ["uvicorn", "server.app:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["python", "main.py", "--server"]
+
