--- a/kiwi_cook/.npmrc
+++ b/kiwi_cook/.npmrc
@@ -1,4 +1,4 @@
-# pnpm-related options
+# pnpm-related optionsConfig
 shamefully-hoist=true
 strict-peer-dependencies=false
 # to get the latest compatible packages when creating the project https://github.com/pnpm/pnpm/issues/6463
