Add user login and chat edit

--- a/kiwi_cook_server/docker-compose.yml
+++ b/kiwi_cook_server/docker-compose.yml
@@ -16,6 +16,15 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
+    depends_on:
+      - redis
+    networks:
+      - kiwi-cook-network
+
+  redis:
+    image: redis:alpine
+    ports:
+      - "6379:6379"
     networks:
       - kiwi-cook-network
 
