--- a/kiwi_cook_server/pyproject.toml
+++ b/kiwi_cook_server/pyproject.toml
@@ -30,6 +30,7 @@ pyjwt = "^2.9.0"
 rapidfuzz = "^3.10.1"
 pytest = "^8.3.3"
 fastapi-limiter = "^0.1.6"
+redis = "^5.2.0"
 
 [tool.poetry.group.dev.dependencies]
 fastapi = "^0.115.2"
